--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^12.7.0",
+    "formik": "^2.4.9",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
